<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>github.openautonomousconnection</groupId>
    <artifactId>protocol</artifactId>
    <version>1.0.0-BETA.1</version>
    <organization>
        <name>Open Autonomous Connection</name>
        <url>https://open-autonomous-connection.org/</url>
    </organization>
    <url>https://open-autonomous-connection.org/protocol/</url>
    <description>The Protocol for Server and Client</description>

    <properties>
        <maven.compiler.source>23</maven.compiler.source>
        <maven.compiler.target>23</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <profiles>
        <profile>
            <id>github</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>
    </profiles>

    <developers>
        <developer>
            <name>UnlegitDqrk</name>
            <organization>Open Autonomous Connection</organization>
            <organizationUrl>https://open-autonomous-connection.org/</organizationUrl>
            <url>https://unlegitdqrk.dev/</url>
            <roles>
                <role>Owner</role>
                <role>Head Developer</role>
            </roles>
        </developer>
        <developer>
            <name>Maple</name>
            <organization>Open Autonomous Connection</organization>
            <organizationUrl>https://open-autonomous-connection.org/</organizationUrl>
            <url>https://niumaple.carrd.co/</url>
            <roles>
                <role>Owner</role>
                <role>Head Developer</role>
            </roles>
        </developer>
    </developers>

    <issueManagement>
        <system>GitHub Issue Tracker</system>
        <url>https://github.com/Open-Autonomous-Connection/Protocol/issues</url>
    </issueManagement>

    <repositories>
        <repository>
            <id>github</id>
            <url>https://maven.pkg.github.com/unlegitdqrk/unlegitlibrary</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>protocol</name>
            <url>https://maven.pkg.github.com/open-autonomous-connection/protocol</url>
        </repository>
    </distributionManagement>

    <licenses>
        <license>
            <name>Open Autonomous Public License</name>
            <url>https://github.com/Open-Autonomous-Connection/OAPL/blob/main/LICENSE</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <dependencies>
        <dependency>
            <groupId>me.finn.unlegitlibrary</groupId>
            <artifactId>unlegitlibrary</artifactId>
            <version>1.6.2</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.38</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
</project>